--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="/">Daniel Zhao</a>
             </div>
             <nav>
-                <a href="/projects/">Projects</a>
+                <a href="/work/">Work</a>
                 <a href="/bio/">Bio</a>
                 <a class="soon">Photos coming soon!</a>
             </nav>
@@ -21,16 +21,13 @@
         <main>
             <div class="section wide">
                 <h1>Hello! I'm Daniel.</h1>
-                <h3>I’m a junior at Yale studying data science and global affairs. I'm a 2019 Civic Digital Fellow at the Bureau of Labor Statistics, building dashboards and leveraging natural language processing to improve internal reporting processes. I'm passionate about tech policy, modernizing government, smart cities, and urban planning.</h3>
-                <!-- TALK ABOUT WORKING IN BOTH LOCAL/FEDERAL + PRIVATE -->
-                <!-- <p>I'm a technologist at heart, but I care immensely about how policies impact real people. I want to use data to make processes more efficient, make more informed decisions, and benefit society in an equitable way.</p> -->
-                <p>During my spare time, I take photos, play music, read about trains and planes, and follow politics. Check out some photos from a recent trip to Brussels, Berlin, and Norway below!</p>
+                <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and urban planning. During my spare time, I take photos, play music, read about trains and planes, and follow politics.</h3>
                 <p>My resume is linked <a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok">here</a>. If you have any questions, don't hesitate to get in touch with me via <a href="mailto:iamdanzhao@gmail.com">email</a>.</p>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
                 <h4>What I'm working on</h4>
-                <p>I'm currently <strong>interning at the U.S. Bureau of Labor Statistics</strong> as a <strong>Civic Digital Fellow</strong>, part of a program sponsored by <strong>Coding It Forward</strong> designed to bring technical minds into the public sector.</p>
+                <p>I'm currently <strong>interning at the U.S. Bureau of Labor Statistics</strong> as a <strong>2019 Civic Digital Fellow</strong>, part of a cohort faciliated by <strong>Coding It Forward</strong> to bring innovation into the federal government. I'm working on building dashboards and leveraging natural language processing to improve internal reporting processes.</p>
                 <p>This upcoming fall, I'll be working to establish the <strong>Yale Daily News'</strong> inaugural <strong>Data Desk</strong>, a new initiative focused on bringing data-driven journalism to the nation's oldest college daily. I'm also working on a research project with <strong>Yale Tsai CITY and UNICEF</strong> focusing on how to scale open-source technologies to impact childrens' outcomes in developing nations.</p>
             </div>
             <div class="section wide sep"></div>
