--- a/work/index.html
+++ b/work/index.html
@@ -6,6 +6,7 @@
         <link href="/styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,400,400i,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     </head>
     <body>
         <header>
@@ -79,7 +80,7 @@
                     <li><strong>Let It Go</strong> from <em>Frozen</em> for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvZUdfUV81Z00xU1k/view?usp=sharing">pdf</a>)</li>
                     <li><strong>For Good</strong> from <em>Wicked</em> for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvMlNjMFF0a1R6M2s/view?usp=sharing">pdf in C major</a>, <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvLWxvZFNHbllVUUU/view?usp=sharing">pdf in Db major</a>, <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvR3FfZTlEbWt2VFk/view?usp=sharing">vocal lead</a>)</li>
                 </ul>
-                <h4>Piano notations</h4>
+                <h4>Piano notations</h4>                
                 <ul>
                     <li><strong>U</strong> by Gareth Emery, as covered by <a href="https://www.youtube.com/watch?v=h3akvxERe5c">Evan Duffy</a> (<a href="https://drive.google.com/file/d/11uGTH3bLL-5shtaMYBgsP4hIfG99-3Tg/view?usp=sharing">pdf</a>)</li>
                     <li><strong>Sweet Escape</strong> by Alesso for piano lead (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvWUNJbUNyNVdhTFU/view?usp=sharing">pdf</a>)</li>
@@ -87,8 +88,6 @@
                     <li><strong>Kawaranai Mono</strong> from <em>The Girl Who Leapt Through Time</em> for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvYzNlR1ZsbGJEcnc/view?usp=sharing">pdf</a>)</li>
                     <li><strong>For River</strong> from <em>To The Moon</em> for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvUVVsUVE5Z3FSNzg/view?usp=sharing">pdf</a>)</li>
                 </ul>
-
-
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
