--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="/work/">Work</a>
                 <a href="/bio/">Bio</a>
-                <a class="soon">Photos coming soon!</a>
+                <a class="soon">Photos</a>
             </nav>
         </header>
         <main>
