more info on projects page
add more on projects, add photo to homepage, css cleanup

--- a/work/index.html
+++ b/work/index.html
@@ -22,10 +22,17 @@
         <main>
             <div class="section wide">
                 <h1>My Work</h1>
+                <p>Here's a collection of projects I've worked on, documentts I've compiled, research I've conducted, musical scores I've notated, and other things I've created. <a href="mailto:daniel@danielzhao.com">Reach out</a> if you have any questions!</p>
+                <ul class="arrow-list bold-items">
+                    <li><a href="#data-science">Data science</a></li>
+                    <li><a href="#social-science">Social science & policy</a></li>
+                    <li><a href="#music">Music & piano</a></li>
+                    <li><a href="#random">Random stuff</a></li>
+                </ul>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
-                <h2>Data science</h2>
+                <h2><a id="data-science" class="anchor"></a>Data science</h2>
                 <div class="cols project-container">
                     <div class="half project">
                         <img src="/media/projects-waze-cover.jpg">
@@ -65,22 +72,42 @@
                         </span>
                     </div>
                 </div>
+                <h4>Reference resources</h4>
+                <p class="description">I'm currently working on creating reference guides for data science material, as a way to document what I'm learning in courses, use as a reference tool down the road, and hopefully be useful to others. These will be updated as I learn more and take the time to add to these guides.</p>
+                <span class="action-bar">
+                    <a class="action button" href="/media/r_reference.html" target="_blank">R Reference</a>
+                    <a class="action button" href="https://drive.google.com/file/d/1CeTKZ32HvNSXsvFgMBpNHLc0B5npiUac/view?usp=sharing" target="_blank">Statistics Reference</a>
+                </span>
+                <p class="description">I'm also working on creating one fo Python. Let me know if there are any errors and things I can change!</p>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
-                <h2>Policy</h2>
-                <p>Coming soon!</p>
+                <h2><a id="social-science" class="anchor"></a>Social science & policy</h2>
+                <h4 class="title">Mobility, density, diversity, and the legacy of Jane Jacobs: measuring segregation in the urban built environment (<a href="https://drive.google.com/open?id=1bnbmrnGSz1ivPDXK9ML7a-28cfQ7h6OV">Full text</a>)</h4>
+                <p class="description">Research proposal for a study to determine a relationship between characteristics of the built environment, such as street configuration, transit access, building dilapidation, and tree cover, and the extent of racial segregation in urban neighborhoods. Would utilize data sources such as the <a href="https://zola.planning.nyc.gov/">NYC Zoning &amp; Land Use Map</a>, the <a href="https://tree-map.nycgovparks.org/">New York Street Tree Map</a>, the <a href="http://senseable.mit.edu/treepedia">Treepedia Green View Index</a>, and GIS data. <em>For course final project.</em></p>
+                <p class="description">As a side project, I'm collecting this data to conduct the statistical analysis sometime in the future.</p>
+                <h4 class="title">Future of healthcare: increasing interoperability of electronic health records</h4>
+                <p class="description">A history of electronic health record (EHR) adoption in the United States, why interoperability of health data from different EHRs vendors has stalled, and how further interoperability can benefit big data-based drug research, precision medicine, and patient-centered care. <em>For course final project.</em></p>
+                <h4 class="title">Various policy reports I've worked on</h4>
+                <p class="description"><strong>State of the Connecticut Green Bank (Fall 2018 to Spring 2019),</strong> detailing its history as the first green bank to be established in the United States, the various programs that it helps sponsors to support green energy projects across the state of Connecticut, the interplay between its investment model and its shift towards equitable access to green energy, and present challenges in the face of Connecticut's budgetary challenges. <em>I led this research as Center Head of the Yale Roosevelt Institute's Center for Energy and Environment.</em></p>
+                <p class="description"><strong>Passic River policy brief (Spring 2018),</strong> including its role in New Jersey's economic growth, past state- and federal-level efforts to prevent flooding, and current efforts by the Environmental Protection Agency to clean up contamination by chemical companies that have historically dumped pollutants into the river. <em>Research conducted for Mikie Sherrill's congression campaign in New Jersey's 11th District.</em></p>
+                <h4>Course notes</h4>
+                <p class="description">These are notes I've compiled for courses I've taken, as a study and review tool. Feel free to use at your own discretion, although I make no guarantees for the accuracy of the notes or the degree to which they will represent the course as taught in future semesters.</p>
+                <ul class="arrow-list bold-items">
+                    <li><a href="https://drive.google.com/file/d/1s_e9aooDNapjE3X0FeUKfZDnQ7oTdPsG/view?usp=sharing" target="_blank">Sustainability in the 21st Century (GLBL 217, Fall 2017)</a></li>
+                    <li><a href="https://drive.google.com/file/d/1vTsq0fOixLEUefBCcL8mLy9ej9sBTF5o/view?usp=sharing" target="_blank">Approaches to International Development (GLBL 225, Spring 2019)</a></li>
+                </ul>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
-                <h2>Music</h2>
-                <h4>Piano arrangements</h4>
+                <h2><a id="music" class="anchor"></a>Music</h2>
+                <h4 class="title">Piano arrangements</h4>
                 <ul>
                     <li><strong>Photograph</strong> by Ed Sheeran for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvbkRCZ2hSampQeG8/view?usp=sharing">pdf</a>)</li>
                     <li><strong>Let It Go</strong> from <em>Frozen</em> for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvZUdfUV81Z00xU1k/view?usp=sharing">pdf</a>)</li>
                     <li><strong>For Good</strong> from <em>Wicked</em> for piano solo (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvMlNjMFF0a1R6M2s/view?usp=sharing">pdf in C major</a>, <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvLWxvZFNHbllVUUU/view?usp=sharing">pdf in Db major</a>, <a href="https://drive.google.com/file/d/0B0wuRJcMeNcvR3FfZTlEbWt2VFk/view?usp=sharing">vocal lead</a>)</li>
                 </ul>
-                <h4>Piano notations</h4>                
+                <h4 class="title">Piano notations</h4>                
                 <ul>
                     <li><strong>U</strong> by Gareth Emery, as covered by <a href="https://www.youtube.com/watch?v=h3akvxERe5c">Evan Duffy</a> (<a href="https://drive.google.com/file/d/11uGTH3bLL-5shtaMYBgsP4hIfG99-3Tg/view?usp=sharing">pdf</a>)</li>
                     <li><strong>Sweet Escape</strong> by Alesso for piano lead (<a href="https://drive.google.com/file/d/0B0wuRJcMeNcvWUNJbUNyNVdhTFU/view?usp=sharing">pdf</a>)</li>
@@ -91,23 +118,9 @@
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
-                <h2>Random stuff</h2>
-                <div class="cols project-container">
-                    <div class="full project">
-                        <img src="/media/projects-hubs.jpg">
-                        <span class="title">Map of hubs of US Big Three airlines companies</span>
-                        <span class="subtitle">As of December 2018</span>
-                        <span class="description">Note: Delta has since grown Boston (BOS) into a hub, and established focus city operations Austin (AUS), Nashville (BNA), and San Jose (SJC).</span>
-                        <span class="tool-bar">
-                            <span class="label">Created with</span><br>
-                            <span class="tool">Google My Maps</span>
-                        </span>
-                        <span class="action-bar">
-                            <span class="label">Links</span><br>
-                            <a class="action button" href="https://www.google.com/maps/d/u/0/edit?mid=1x2s9hTjBWYEQRFqwLvMWxp2eVJENeZsx&ll=30.791630598850965%2C-96.6942578&z=4" target="_blank">Google Maps</a>
-                        </span>
-                    </div>
-                </div>
+                <h2><a id="random" class="anchor"></a>Random stuff</h2>
+                <h4 class="title">Map of hubs of US Big Three airline companies (<a href="https://www.google.com/maps/d/u/0/edit?mid=1x2s9hTjBWYEQRFqwLvMWxp2eVJENeZsx&ll=30.791630598850965%2C-96.6942578&z=4">Google Maps</a>)</h4>
+                <p class="description">As of December 2018. <em>[Note: Delta has since grown Boston (BOS) into a hub, and established focus city operations Austin (AUS), Nashville (BNA), and San Jose (SJC).]</em></p>
             </div>
         </main>
         <footer>
