--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
         </header>
         <main>
             <div class="section wide">
-                <h1>Hello! I'm Daniel.</h1>
-                <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and urban planning. During my spare time, I take photos, play music, read about trains and planes, and follow politics.</h3>
-                <p>My resume is linked <a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok">here</a>. If you have any questions, don't hesitate to get in touch with me via <a href="mailto:iamdanzhao@gmail.com">email</a>.</p>
+                <img src="/media/profile.jpg" id="bio-prof-pic">
+                <h1>Hi! I'm <span class="blue">Daniel</span></h1>
+                <h3>I’m a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
+                <p>During my spare time, I take photos, play music, read about trains and planes, and follow politics. If we have any shared interests, I'd love to get in touch! Just shoot me an email at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</p>
+                <p></p>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
                 <h4>What I'm working on</h4>
                 <p>I'm currently <strong>interning at the U.S. Bureau of Labor Statistics</strong> as a <strong>2019 Civic Digital Fellow</strong>, part of a cohort faciliated by <strong>Coding It Forward</strong> to bring innovation into the federal government. I'm working on building dashboards and leveraging natural language processing to improve internal reporting processes.</p>
-                <p>This upcoming fall, I'll be working to establish the <strong>Yale Daily News'</strong> inaugural <strong>Data Desk</strong>, a new initiative focused on bringing data-driven journalism to the nation's oldest college daily. I'm also working on a research project with <strong>Yale Tsai CITY and UNICEF</strong> focusing on how to scale open-source technologies to impact childrens' outcomes in developing nations.</p>
+                <p>This upcoming fall, I'll be working to establish the <strong>Yale Daily News'</strong> inaugural <strong>Data Desk</strong>, a new initiative focused on bringing data-driven journalism to the nation's oldest college daily. I'm also working on a research project with <strong>Yale Tsai CITY and UNICEF</strong> focusing on how to scale open-source data science technologies to impact childrens' outcomes in developing nations.</p>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
                 <h4>Photos from Berlin, Brussels, Norway</h4>
-                <p>Nine flights, four trains, three Ubers, two taxis, two buses, and a lot of walking. Here's a snapshot of a recent spring break trip to the capitol of the European Union, a reunified Berlin, and a snowy Scandinavia.</p>
+                <p>Nine flights, four trains, three Ubeers, two taxis, two buses, and a lot of walking. Here's a snapshot of a recent spring break trip to the capitol of the European Union, a reunified Berlin, and a snowy Scandinavia.</p>
             </div>
             <div class="bs-carousel-container"> 
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
