--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="section wide">
                 <img src="/media/profile.jpg" id="bio-prof-pic">
                 <h1>Hi! I'm <span class="blue">Daniel</span></h1>
-                <h3>I’m a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
+                <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
                 <p>During my spare time, I take photos, play music, read about trains and planes, and follow politics. If we have any shared interests, I'd love to get in touch! Just shoot me an email at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</p>
                 <p></p>
             </div>
