--- a/work/index.html
+++ b/work/index.html
@@ -22,7 +22,7 @@
         <main>
             <div class="section wide">
                 <h1>My Work</h1>
-                <p>Here's a collection of projects I've worked on, documentts I've compiled, research I've conducted, musical scores I've notated, and other things I've created. <a href="mailto:daniel@danielzhao.com">Reach out</a> if you have any questions!</p>
+                <p>Here's a collection of projects I've worked on, documents I've compiled, research I've conducted, musical scores I've notated, and other things I've created. <a href="mailto:daniel@danielzhao.com">Reach out</a> if you have any questions!</p>
                 <ul class="arrow-list bold-items">
                     <li><a href="#data-science">Data science</a></li>
                     <li><a href="#social-science">Social science & policy</a></li>
