update homepage + other styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <link href="/styles/main.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,400,400i,600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,300,400,400i,500,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     </head>
@@ -19,22 +19,15 @@
             <nav>
                 <a href="/work/">Work</a>
                 <a href="/bio/">Bio</a>
-                <a class="soon">Photos</a>
             </nav>
         </header>
         <main>
             <div class="section wide">
-                <img src="/media/profile.jpg" id="bio-prof-pic">
-                <h1>Hi! I'm <span class="blue">Daniel</span></h1>
-                <h3>I’m a junior at Yale studying data science and global affairs. I'm passionate about tech policy, modernizing government, smart cities, and the future of mobility.</h3>
-                <p>During my spare time, I take photos, play music, read about trains and planes, and follow politics. If we have any shared interests, I'd love to get in touch! Just shoot me an email at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</p>
-                <p></p>
-            </div>
-            <div class="section wide sep"></div>
-            <div class="section wide">
-                <h4>What I'm working on</h4>
-                <p>I'm currently <strong>interning at the U.S. Bureau of Labor Statistics</strong> as a <strong>2019 Civic Digital Fellow</strong>, part of a cohort faciliated by <strong>Coding It Forward</strong> to bring innovation into the federal government. I'm working on building dashboards and leveraging natural language processing to improve internal reporting processes.</p>
-                <p>This upcoming fall, I'll be working to establish the <strong>Yale Daily News'</strong> inaugural <strong>Data Desk</strong>, a new initiative focused on bringing data-driven journalism to the nation's oldest college daily. I'm also working on a research project with <strong>Yale Tsai CITY and UNICEF</strong> focusing on how to scale open-source data science technologies to impact childrens' outcomes in developing nations.</p>
+                <span class="home-top"></span>
+                <span class="home-title">Hey there 👋</span>
+                <span class="home-desc">I'm <span class="blue">Daniel</span>, and I’m currently a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, civic tech, smart cities, and the future of mobility.</span>
+                <span class="home-subdesc">This summer, I'm a <span class="blue">Civic Digital Fellow</span> at the <span class="blue">Bureau of Labor Statistics</span>, building dashboards to facilitate internal reporting processes. During my spare time, In my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
+                <span class="home-subdesc">Take a look around my site, and if we have something in common, I'd love to get in touch! Just email me at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</span>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
