--- a/work/index.html
+++ b/work/index.html
@@ -16,7 +16,6 @@
             <nav>
                 <a href="/work/">Work</a>
                 <a href="/bio/">Bio</a>
-                <a class="soon">Photos</a>
             </nav>
         </header>
         <main>
@@ -40,18 +39,18 @@
                         <span class="subtitle">Visualizing congestion patterns in Louisville using crowdsourced Waze data</span>
                         <span class="description">I used Waze data to visualize traffic patterns in Louisville, pinpoint congestion points, and make recommendations to planners, saving the city money by not having to hire outside engineering firms.</span>
                         <span class="description">Internship at Louisville's Office of Civic Innovation. Part of <a href="https://github.com/LouisvilleMetro/WazeCCPProcessor">Louisville's larger Waze processor project.</a></span>
-                        <span class="tool-bar">
-                            <span class="label">Tools</span><br>
-                            <span class="tool">MS Power BI</span>
-                            <span class="tool">AWS</span>
-                            <span class="tool">SQL</span>
-                            <span class="tool">R</span>
-                        </span>
-                        <span class="action-bar">
-                            <span class="label">Links</span><br>
-                            <span class="action button">More info coming soon!</span>
-                            <a class="action button" href="https://medium.com/louisville-metro-opi2/data-driven-governance-reflecting-on-opi2-bdd324aefbdc">Medium</a>
-                        </span>
+                        <span class="label">Tools</span>
+                        <ul class="bar-list tools">
+                            <li>MS Power BI</li>
+                            <li>AWS</li>
+                            <li>SQL</li>
+                            <li>R</li>
+                        </ul>
+                        <span class="label">Links</span>
+                        <ul class="bar-list actions buttons">
+                            <li>More info coming soon</li>
+                            <li><a class="button" href="https://medium.com/louisville-metro-opi2/data-driven-governance-reflecting-on-opi2-bdd324aefbdc">Medium</a></li>
+                        </ul>
                     </div>
                     <div class="half project">
                         <img src="/media/projects-tradewar-cover.jpeg">
@@ -59,26 +58,26 @@
                         <span class="subtitle">Tracking the US-China trade war using natural language processing</span>
                         <span class="description">Applied sentiment analysis and LDA topic modeling on scraped White House press releases and Chinese state media articles. Correlated changes in sentiment to major trade war developments.</span>
                         <span class="description">Final project for <em>Big Data and Global Policies</em>. With Gordon Xiang, Huahao Zhou. I led the technical side.</span>
-                        <span class="tool-bar">
-                            <span class="label">Tools</span><br>
-                            <span class="tool">Python</span>
-                            <span class="tool">Selenium</span>
-                            <span class="tool">BeautifulSoup</span>
-                            <span class="tool">R</span>
-                        </span>
-                        <span class="action-bar">
-                            <span class="label">Links</span><br>
-                            <a class="action button" href="https://github.com/iamdanzhao/maketradenotwar">GitHub and Results</a>
-                        </span>
+                        <span class="label">Tools</span>
+                        <ul class="bar-list tools">
+                            <li>Python</li>
+                            <li>Selenium</li>
+                            <li>BeautifulSoup</li>
+                            <li>R</li>
+                        </ul>
+                        <span class="label">Links</span>
+                        <ul class="bar-list actions buttons">
+                            <li><a class="button" href="https://github.com/iamdanzhao/maketradenotwar">GitHub and Results</a></li>
+                        </ul>
                     </div>
                 </div>
                 <h4>Reference resources</h4>
                 <p class="description">I'm currently working on creating reference guides for data science material, as a way to document what I'm learning in courses, use as a reference tool down the road, and hopefully be useful to others. These will be updated as I learn more and take the time to add to these guides.</p>
-                <span class="action-bar">
-                    <a class="action button" href="/media/r_reference.html" target="_blank">R Reference</a>
-                    <a class="action button" href="https://drive.google.com/file/d/1CeTKZ32HvNSXsvFgMBpNHLc0B5npiUac/view?usp=sharing" target="_blank">Statistics Reference</a>
-                </span>
-                <p class="description">I'm also working on creating one fo Python. Let me know if there are any errors and things I can change!</p>
+                <ul class="arrow-list bold-items">
+                    <li><a class="" href="/media/r_reference.html" target="_blank">R Reference</a></li>
+                    <li><a class="" href="https://drive.google.com/file/d/1CeTKZ32HvNSXsvFgMBpNHLc0B5npiUac/view?usp=sharing" target="_blank">Statistics Reference</a></li>
+                </ul>
+                <p class="description">I'm also working on creating one for Python. Let me know if there are any errors and things I can change!</p>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
