--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 <span class="home-top"></span>
                 <span class="home-title">Hey there 👋</span>
                 <span class="home-desc">I'm <span class="blue">Daniel</span>, and I’m currently a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, civic tech, smart cities, and the future of mobility.</span>
-                <span class="home-subdesc">This summer, I'm a <span class="blue">Civic Digital Fellow</span> at the <span class="blue">Bureau of Labor Statistics</span>, building dashboards to facilitate internal reporting processes. During my spare time, In my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
+                <span class="home-subdesc">Currently, I'm a <a href="https://www.codingitforward.com/fellowship" style="font-weight: 600">Civic Digital Fellow</a> at the <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" style="font-weight: 600">Bureau of Labor Statistics</a>, working to improve internal reporting processes as well as immersing myself in the civic tech community. During my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
                 <span class="home-subdesc">Take a look around my site, and if we have something in common, I'd love to get in touch! Just email me at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</span>
+                <span class="home-bottom"></span>
             </div>
             <div class="section wide sep"></div>
             <div class="section wide">
