--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="section wide sep"></div>
             <div class="section wide">
                 <h4>Photos from Berlin, Brussels, Norway</h4>
-                <p>Nine flights, four trains, three Ubeers, two taxis, two buses, and a lot of walking. Here's a snapshot of a recent spring break trip to the capitol of the European Union, a reunified Berlin, and a snowy Scandinavia.</p>
+                <p>Nine flights, four trains, three Ubers, two taxis, two buses, and a lot of walking. Here's a snapshot of a recent spring break trip to the capitol of the European Union, a reunified Berlin, and a snowy Scandinavia.</p>
             </div>
             <div class="bs-carousel-container"> 
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
