clean tag structure for column layout, plus more
1) clean up tag structure for column layout (for projects and non-projects), 2) clean up tag structure for unordered lists, 3) added PICTURE grants proposal, 4) added colophon section on bio page, 5) new h5 styles for (non-blocked) project details, 6) spacing for container divs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </header>
         <main>
-            <div class="section wide">
+            <div class="wide">
                 <span class="home-top"></span>
                 <span class="home-title">Hey there 👋</span>
                 <span class="home-desc">I'm <span class="blue">Daniel</span>, and I’m currently a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, civic tech, smart cities, and the future of mobility.</span>
@@ -30,8 +30,8 @@
                 <span class="home-subdesc">Take a look around my site, and if we have something in common, I'd love to get in touch! Just email me at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</span>
                 <span class="home-bottom"></span>
             </div>
-            <div class="section wide sep"></div>
-            <div class="section wide">
+            <div class="wide sep"></div>
+            <div class="wide">
                 <h4>Photos from Berlin, Brussels, Norway</h4>
                 <p>Nine flights, four trains, three Ubeers, two taxis, two buses, and a lot of walking. Here's a snapshot of a recent spring break trip to the capitol of the European Union, a reunified Berlin, and a snowy Scandinavia.</p>
             </div>
