various mobile spacing adjustments + more
updated link to cdf slides to the CIF GitHub version, change wording on homepage for better mobile wrapping, colophon section is now one container with four .half children

--- a/work/index.html
+++ b/work/index.html
@@ -45,7 +45,7 @@
                         </ul>
                         <span class="label">Links</span>
                         <ul class="list-bar actions buttons">
-                            <li><a class="button" href="https://drive.google.com/file/d/1c9Psv_-7uSVWiXNmWB-a87Z8onwRs3HF/view?usp=sharing">Slides</a></li>
+                            <li><a class="button" href="https://github.com/codingitforward/cdfdemoday2019/blob/master/Integrating_Multiple_Sources_of_Customer_Feedback_Data.pdf">Slides</a></li>
                             <li>More coming soon!</li>
                         </ul>
                     </div>
