initial commit for photos page
added zurich, berlin trip, cancun; modified homepage slightly; added fade on homepage

--- a/work/louisville/index.html
+++ b/work/louisville/index.html
@@ -31,6 +31,7 @@
             </div>
             <nav>
                 <a href="/work/">Work</a>
+                <a href="/photos/">Photos</a>
                 <a href="/bio/">Bio</a>
             </nav>
         </header>
