--- a/index.html
+++ b/index.html
@@ -31,83 +31,25 @@
             </div>
             <nav>
                 <a href="/work/">Work</a>
+                <a href="/photos/">Photos</a>
                 <a href="/bio/">Bio</a>
             </nav>
         </header>
         <main>
+            <div id="gradient-top"></div>
+            <div id="gradient-bottom"></div>
             <div class="wide">
                 <span class="home-top"></span>
                 <span class="home-title">Hey there 👋</span>
                 <span class="home-desc">I'm <span class="blue">Daniel</span>, and I’m a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, civic tech, smart cities, and the future of mobility.</span>
                 <span class="home-subdesc">On campus, I'm spearheading a new <strong>Data Analytics desk</strong> within the Yale Daily News, where we're using open datasets to investigate <strong>pressing campus issues</strong> and produce <strong>interactive data visualizations</strong>. I'm also a teaching assistant for <em>Intro Machine Learning</em> <span class="small-text">[S&amp;DS 355]</span>, a new course currently in its inaugural semester.</span>
-                <span class="home-subdesc">I was a <a href="https://www.codingitforward.com/fellowship" style="font-weight: 600">2019 Civic Digital Fellow</a> at the <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" style="font-weight: 600">Bureau of Labor Statistics</a>, working to improve internal reporting processes as well as immersing myself in the civic tech community. During my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
+                <span class="home-subdesc">I was a <a href="https://www.codingitforward.com/fellowship" style="font-weight: 600">2019 Civic Digital Fellow</a> at the <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" style="font-weight: 600">Bureau of Labor Statistics</a>, prototyping tools to improve internal reporting workflows and conducting stakeholder engagement. I'm experienced in data analysis, policy research, and project management. During my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
                 <span class="home-subdesc">Take a look around my site, and if we have something in common, I'd love to get in touch! Just email me at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</span>
                 <span class="home-bottom"></span>
             </div>
             <div class="wide sep"></div>
-            <div class="wide">
-                <h4>Photos from Berlin, Brussels, Norway</h4>
-                <p>Nine flights, four trains, three Ubers, two taxis, two buses, and a lot of walking. Here's a snapshot of a recent spring break trip to the capitol of the European Union, a reunified Berlin, and a snowy Scandinavia.</p>
-            </div>
-            <div class="bs-carousel-container"> 
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                    <li data-target="#myCarousel" data-slide-to="5"></li>
-                    <li data-target="#myCarousel" data-slide-to="6"></li>
-                    <li data-target="#myCarousel" data-slide-to="7"></li>
-                </ol>
-
-                <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="media/DZ_20190316_1648_9249.jpg" style="width:100%;">
-                        </div>
-
-                        <div class="item">
-                            <img src="media/DZ_20190317_1709_9384.jpg" style="width:100%;">
-                        </div>
-
-                        <div class="item">
-                            <img src="media/DZ_20190318_1857_9719.jpg" style="width:100%;">
-                        </div>
-                        
-                        <div class="item">
-                            <img src="media/DZ_20190318_2152_9786.jpg" style="width:100%;">
-                        </div>
-
-                        <div class="item">
-                            <img src="media/DZ_20190319_1328_9910.jpg" style="width:100%;">
-                        </div>
-
-                        <div class="item">
-                            <img src="media/DZ_20190319_1506_0028.jpg" style="width:100%;">
-                        </div>
-                        
-                        <div class="item">
-                            <img src="media/DZ_20190320_1802_0684.jpg" style="width:100%;">
-                        </div>
-
-                        <div class="item">
-                            <img src="media/DZ_20190322_2022_1311.jpg" style="width:100%;">
-                        </div>
-                    </div>
-
-                <!-- Left and right controls -->
-                    <a class="left carousel-control arrow" href="#myCarousel" data-slide="prev">
-                      <span class="glyphicon glyphicon-chevron-left"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control arrow" href="#myCarousel" data-slide="next">
-                      <span class="glyphicon glyphicon-chevron-right"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                </div>
+            <div class="inset">
+                <img src="/media/cdfdemoday.jpg">
             </div>
         </main>
         <footer>
