--- a/work/index.html
+++ b/work/index.html
@@ -28,6 +28,7 @@
             </div>
             <nav>
                 <a href="/work/">Work</a>
+                <a href="/photos/">Photos</a>
                 <a href="/bio/">Bio</a>
             </nav>
         </header>
