add new photo, modify intro text

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
             <div id="gradient-top"></div>
             <div id="gradient-bottom"></div>
             <div class="wide">
+                <img id="bio-prof-pic" src="/media/profile-1.jpg">
                 <span class="home-top"></span>
                 <span class="home-title">Hey there 👋</span>
-                <span class="home-desc">I'm <span class="blue">Daniel</span>, and I’m a junior at Yale studying <span class="blue">data science and global affairs</span>. I'm passionate about tech policy, civic tech, smart cities, and the future of mobility.</span>
+                <span class="home-desc">I'm <span class="blue">Daniel</span>, and I’m a junior at Yale studying <span class="blue">statistics & global affairs</span>. I believe that technology, data, and public policy should be used as a force for good.</span>
                 <span class="home-subdesc">On campus, I'm spearheading a new <strong>Data Analytics desk</strong> within the Yale Daily News, where we're using open datasets to investigate <strong>pressing campus issues</strong> and produce <strong>interactive data visualizations</strong>. I'm also a teaching assistant for <em>Intro Machine Learning</em> <span class="small-text">[S&amp;DS 355]</span>, a new course currently in its inaugural semester.</span>
-                <span class="home-subdesc">I was a <a href="https://www.codingitforward.com/fellowship" style="font-weight: 600">2019 Civic Digital Fellow</a> at the <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" style="font-weight: 600">Bureau of Labor Statistics</a>, prototyping tools to improve internal reporting workflows and conducting stakeholder engagement. I'm experienced in data analysis, policy research, and project management. During my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
-                <span class="home-subdesc">Take a look around my site, and if we have something in common, I'd love to get in touch! Just email me at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</span>
+                <span class="home-subdesc">I'm passionate about tech policy, civic tech, smart cities, and the future of mobility. I was a <a href="https://www.codingitforward.com/fellowship" style="font-weight: 600">2019 Civic Digital Fellow</a> at the <a href="https://blog.codingitforward.com/meet-the-2019-fellows-bureau-of-labor-statistics-db727bd7edfc" style="font-weight: 600">Bureau of Labor Statistics</a>, prototyping tools to improve internal reporting workflows and conducting stakeholder engagement. During my spare time, I take <a href="https://www.instagram.com/danielzhao.ph/" target="_blank">photos</a>, play music, read about trains and planes, and follow politics.</span>
+                <span class="home-subdesc">I'd love to talk! Shoot me an email at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>.</span>
                 <span class="home-bottom"></span>
             </div>
             <div class="wide sep"></div>
