--- a/topcourses/index.html
+++ b/topcourses/index.html
@@ -43,14 +43,14 @@
         <div class="row narrow">
             <div class="article-info">
                 <h1>Yale's Most Popular Courses</h1>
-                <p class="subtitle">What are students shopping in Spring 2020?</p>
+                <p class="subtitle">The courses students are shopping in Spring 2020</p>
                 <p class="byline">by Maggie Nolan and Daniel Zhao</p>
             </div>
             <div class="article-text">
-                <p>Like clockwork, shopping period is upon us once again. Cue the cycle of desperate emails to professors vying for one of the 18 seats in seminars, the furious search for that 2.0-workload class to fulfill a science credit, and the overflowing classrooms in WLH as professors scramble to find a larger classroom.</p>
-                <p>Using data scraped from the Yale Course Demand Statistics website and from CourseTable, we analyzed the classes that are most shopped, trending classes each day, and the departments with the most shoppers.</p>
-                <p>Check back daily, as we'll update this page each night to reflect the latest trends.</p>
-                <p>These are the most popular courses at Yale.</p>
+                <p>Like clockwork, shopping period is upon us once again. Cue the cycle of desperate emails from students vying for one of the 18 seats in seminars, the furious search for that 2.0-workload science credit, and the overflowing classrooms in WLH on the first day of shopping period.</p>
+                <p>Using data scraped from the Yale Course Demand Statistics website, we analyzed the classes that are most shopped, trending classes, and the most oversubscribed seminars.</p>
+                <p>Be sure to check back daily, since we'll update this page to reflect the latest trends.</p>
+                <p>From <em>Bioethics and Law</em> to <em>Introductory Microeconomics</em>, these are the most popular courses at Yale.</p>
             </div>
         </div>
         <div class="row wide">
